--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="container">
         <nav class="nav">
         <div class="brand">
-            <div class="logo">MM</div>
+            <div class="logo" ><img src="video/logo.png" alt="MathMastery"></div>
             <div class="brand-text">
                 <h1>MathMastery Online</h1>
                 <div class="subtitle">Grade 10 & 11 • Live interactive classes</div>
@@ -289,7 +289,7 @@
                     <div class="testimonial-header">
                         <img src="video/girl.png" alt="Student" class="testimonial-avatar">
                         <div>
-                            <h4>M.Nazriya</h4>
+                            <h4>R.Shakshika</h4>
                             <p class="muted small">Grade 10 Student</p>
                         </div>
                         <div class="rating">
@@ -307,7 +307,7 @@
                     <div class="testimonial-header">
                         <img src="video/boy.png" alt="Student" class="testimonial-avatar">
                         <div>
-                            <h4>M.Rilwan</h4>
+                            <h4>M.Dhanusha</h4>
                             <p class="muted small">Grade 11 Student</p>
                         </div>
                         <div class="rating">
